--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             However, these approaches often struggle to maintain consistency across dimensions, particularly when handling fast-moving objects that appear at different times and viewpoints.
             In this paper, we present CogDriving, a novel network designed for synthesizing high-quality multi-view driving videos. 
             CogDriving leverages a Diffusion Transformer architecture with holistic-4D attention modules, enabling simultaneous associations across the spatial, temporal, and viewpoint dimensions.
-            We also propose a lightweight controller tailored for CogDriving, \ie, Micro-Controller, which uses only 1.1\% of the parameters of the standard ControlNet, enabling precise control over Bird’s-Eye-View layouts.
+            We also propose a lightweight controller tailored for CogDriving, i.e., Micro-Controller, which uses only 1.1% of the parameters of the standard ControlNet, enabling precise control over Bird’s-Eye-View layouts.
             To enhance the generation of object instances crucial for autonomous driving, we propose a re-weighted learning objective, dynamically adjusting the learning weights for object instances during training.
             CogDriving demonstrates strong performance on the nuScenes validation set, achieving an FVD score of 37.8, highlighting its ability to generate realistic driving videos.
           </p>
