--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/abs/2412.03520" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -120,7 +120,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Code (Coming Soon)</span>
                   </a>
                 </span>
 
@@ -151,37 +151,50 @@
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="videos/vid1/reshape/idx18293_view0_rank4.mp4"
+            <source src="videos/vid1/reshape2/idx4469_view0_rank1.mp4"
             type="video/mp4">
           </video>
         </div>
+
         <div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="videos/vid1/reshape/idx69_view0_rank0.mp4"
+            <source src="videos/vid1/reshape2/idx1069_view0_rank0.mp4"
             type="video/mp4">
           </video>
         </div>
+
         <div class="item item-video3">
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <source src="videos/vid1/reshape/idx183_view0_rank0.mp4"
+            <source src="videos/vid1/reshape2/idx21165_view0_rank5.mp4"
             type="video/mp4">
           </video>
         </div>
+
         <div class="item item-video4">
           <video poster="" id="video4" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <source src="videos/vid1/reshape/idx1817_view0_rank0.mp4"
+            <source src="videos/vid1/reshape2/idx26101_view0_rank6.mp4"
             type="video/mp4">
           </video>
         </div>
+
         <div class="item item-video5">
           <video poster="" id="video5" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <source src="videos/vid1/reshape/idx5295_view0_rank1.mp4"
+            <source src="videos/vid1/reshape2/idx13661_view0_rank3.mp4"
             type="video/mp4">
           </video>
+        </div>
+
+        <div class="item item-video6">
+          <video poster="" id="video6" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="videos/vid1/reshape2/idx5581_view0_rank1.mp4"
+            type="video/mp4">
+          </video>
+
         </div>
       </div>
     </div>
