--- a/index.html
+++ b/index.html
@@ -359,7 +359,16 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>
+        @misc{lu2024cogdriving,
+        title={Seeing Beyond Views: Multi-View Driving Scene Video Generation with Holistic Attention}, 
+        author={Hannan Lu and Xiaohe Wu and Shudong Wang and Xiameng Qin and Xinyu Zhang and Junyu Han and Wangmeng Zuo and Ji Tao},
+        year={2024},
+        eprint={2412.03520},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV},
+        url={https://arxiv.org/abs/2412.03520}, 
+  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
