--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>
-        @misc{lu2024cogdriving,
+      <pre><code>@misc{lu2024cogdriving,
         title={Seeing Beyond Views: Multi-View Driving Scene Video Generation with Holistic Attention}, 
         author={Hannan Lu and Xiaohe Wu and Shudong Wang and Xiameng Qin and Xinyu Zhang and Junyu Han and Wangmeng Zuo and Ji Tao},
         year={2024},
